plugins {
    id 'java'
}

version = rootProject.findProperty('mod_version') ?: '2.0.0'
group = 'com.freshwater.haqiworld'
base.archivesName = 'fhw-plugin'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://maven.maxhenkel.de/repository/public' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
    compileOnly "de.maxhenkel.voicechat:voicechat-api:${rootProject.findProperty('voicechat_api_version') ?: '2.6.20'}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

processResources {
    def props = [version: version]
    inputs.property('props', props)
    filesMatching('plugin.yml') {
        expand props
    }
}

// Embed the shared resource pack into the plugin jar as pack.zip
tasks.register('embedResourcePack', Zip) {
    archiveFileName = 'pack.zip'
    destinationDirectory = layout.buildDirectory.dir('generated/pack')
    from(rootProject.file('shared-assets')) {
        include 'pack.mcmeta'
        include 'assets/**'
    }
}

tasks.named('processResources', ProcessResources) {
    dependsOn('embedResourcePack')
    from(tasks.named('embedResourcePack').map { it.archiveFile }) {
        into '.'
        rename { 'pack.zip' }
    }
}

tasks.named('jar', Jar) {
    archiveClassifier = ''
}

tasks.register('copyPluginArtifact', Copy) {
    dependsOn jar
    from jar.flatMap { it.archiveFile }
    into rootProject.layout.buildDirectory.dir('libs')
}
